--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Naslovna</a>
+                        <a class="page-scroll" href="#services">Prva Strana</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Aktuelnosti</a>
