--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                   <h2 class="section-heading">Naslovna</h2>
+                   <h2 class="section-heading">Prva Strana</h2>
                    
 					
 
