--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#services">Prva Strana</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Aktuelnosti</a>
+                        <a class="page-scroll" href="#portfolio">Druga Strana</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Kontakt</a>
@@ -172,7 +172,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Aktuelnosti</h2>
+                    <h2 class="section-heading">Druga Strana</h2>
                     
                 </div>
             </div>
