--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a class="page-scroll" href="#about">Kontakt</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Pitajte doktora - farmaceuta</a>
+                        <a class="page-scroll" href="#contact">Pitajet Šta God Vas Zanima</a>
                     </li>
                 </ul>
             </div>
