message for qa team

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#portfolio">Druga Strana</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Kontakt</a>
+                        <a class="page-scroll" href="#about">Treca Strana</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Pitajte Šta God Vas Zanima</a>
