--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <div class="slide-body" data-group="slide">
                 <img src="img/slide-1.jpg">
                 <div class="caption header" data-animate="slideAppearRightToLeft" data-delay="500" data-length="300">
-                  <h2>Apoteke Vanja</h2>
+                  <h2>QA Apoteka</h2>
                   <div class="caption sub" data-animate="slideAppearLeftToRight" data-delay="800" data-length="300">Zdravstvena ustanova</div>
                 </div>
               <!--  <div class="caption img-html5" data-animate="slideAppearLeftToRight" data-delay="200">
