--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                         <a class="page-scroll" href="#services">Prva Strana</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#services">Prva i po Strana</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#portfolio">Druga Strana</a>
                     </li>
                     <li>
