--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a class="page-scroll" href="#about">Treca Strana</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Pitajte Šta God Vas Zanima</a>
+                        <a class="page-scroll" href="#contact">Pitajte Todu za peask u bubregu!!!</a>
                     </li>
                 </ul>
             </div>
