--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h4 class="section-heading" >Ukoliko imate neka pitanja u vezi proizvoda i kako ga nabaviti molimo Vas popunite Kontakt formu, a mi ćemo Vam se ubrzo javiti!</h4>
+                    <h4 class="section-heading" >Ukoliko imate neka pitanja u vezi proizvoda i kako ga nabaviti molimo Vas popunite Kontakt formu, a QA team ce Vam se ubrzo javiti!</h4>
                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
                 </div>
             </div>
