--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <img src="img/slide-1.jpg">
                 <div class="caption header" data-animate="slideAppearRightToLeft" data-delay="500" data-length="300">
                   <h2>QA Apoteka</h2>
-                  <div class="caption sub" data-animate="slideAppearLeftToRight" data-delay="800" data-length="300">Zdravstvena ustanova</div>
+                  <div class="caption sub" data-animate="slideAppearLeftToRight" data-delay="800" data-length="300">Psihijatrija</div>
                 </div>
               <!--  <div class="caption img-html5" data-animate="slideAppearLeftToRight" data-delay="200">
                   <img src="../img/html5.png">
