--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html lang="en">
 
 <head>
+
+    <script language="JavaScript">
+<!--hide
+var password;
+var pass1="pingpong"
+password=prompt('Enter Password to View Page','');
+if (password==pingpong)
+alert('Correct password, click OK to enter.');
+else
+{
+    window.location="http://www.theuselessweb.com/" ;
+}
+//-->
+</script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
