--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 var password;
 var pass1="pingpong"
 password=prompt('Enter Password to View Page','');
-if (password==pingpong)
+if (password==pass1)
 alert('Correct password, click OK to enter.');
 else
 {
