--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 
 <head>
 	
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src=“https://www.googletagmanager.com/gtag/js?id=UA-53085076-1“></script>
-<script>
- window.dataLayer = window.dataLayer || [];
- function gtag(){dataLayer.push(arguments);}
- gtag(‘js’, new Date());
 
- gtag(‘config’, ‘UA-53085076-1’);
-</script>
 
     <script language="JavaScript">
 <!--hide
@@ -25,6 +17,16 @@ else
     window.location="http://www.theuselessweb.com/" ;
 }
 //-->
+
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-53085076-1"></script>
+<script>
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag(‘js’, new Date());
+
+ gtag(‘config’, ‘UA-53085076-1’);
 </script>
 
     <meta charset="utf-8">
