--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ gtag(‘config’, ‘UA-53085076-1’);
                         <a class="page-scroll" href="#services">PrvA Strana</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Prva i po Strana</a>
+                        <a class="page-scroll" href="#services">PrvA i po Strana</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Druga Strana</a>
