message for qa team

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ gtag(‘config’, ‘UA-53085076-1’);
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>QA Badgers</title>
+    <title>QA Badgers1</title>
 	
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
