--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ gtag(‘config’, ‘UA-53085076-1’);
                         <a class="page-scroll" href="#portfolio">Druga Strana</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Treca Strana</a>
+                        <a class="page-scroll" href="#about">TrecAA Strana</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Pitajte Todu za pesak u bubregu!!!</a>
